--- a/templates/student/student_exam.html
+++ b/templates/student/student_exam.html
@@ -41,12 +41,37 @@
 
         <td> {{t.course_name}}</td>
         
-        <td><a class="btn btn-success btn-sm" style="border-radius:0px;" href="{% url 'take-exam' t.id  %}"><span class="glyphicon glyphicon-check"></span> Attend Exam</a></td>
+          
+        {% if t.next_attempt %}
+        <td><a class="btn btn-success btn-sm confirm-exam start-exam" onclick="trackOpenWindow();" style="border-radius:0px;" href="javascript:void(0)"><span class="glyphicon glyphicon-check"></span> Attend Exam</a></td>
+        {% else %}
+        <td><a class="btn btn-danger btn-sm attempt-exam" style="border-radius:0px;" href="{% url 'view-result'   %}"><span class="glyphicon glyphicon-check"></span> Attend Exam</a></td>
+        {% endif %}
       </tr>
+      <script type="text/javascript">
+        function trackOpenWindow() {
+          if (!window.memwin || window.memwin.closed) {
+            memwin = window.open("/student/take-exam/{{t.id}}", "myWin2", "toolbar=yes, scrollbars=yes, resizable=yes, height=590,width=1200");
+          }
+          window.memwin.focus()
+          location.reload();
+}
+</script>
       {% endfor %}
     </table>
   </div>
 </div>
 
 <br><br><br><br><br><br>
+
+<script>
+  $(document).on('click', '.confirm-exam', function(){
+    return confirm('Are you sure you want to attend this exam?');
+})
+
+  $(document).on('click', '.attempt-exam', function(){
+    return confirm('You are not allowed to attempt again! Just View Result');
+})
+</script>
+
 {% endblock content %}
