--- a/templates/teacher/teacher_view_exam.html
+++ b/templates/teacher/teacher_view_exam.html
@@ -43,8 +43,9 @@
         <td> {{t.course_name}}</td>
         <td>{{t.question_number}}</td>
         <td>{{t.total_marks}}</td>
-        
-        <td><a class="btn btn-danger btn-xs" style="border-radius: 0%;" href="{% url 'delete-exam' t.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+
+
+        <td><a class="btn btn-danger btn-xs confirm-delete" style="border-radius: 0%;" href="{% url 'delete-exam' t.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
       </tr>
       {% endfor %}
     </table>
@@ -52,4 +53,9 @@
 </div>
 
 <br><br><br><br><br><br>
+<script>
+  $(document).on('click', '.confirm-delete', function(){
+    return confirm('Are you sure you want to delete this?');
+})
+</script>
 {% endblock content %}
