--- a/templates/student/start_exam.html
+++ b/templates/student/start_exam.html
@@ -1,105 +1,140 @@
-{% block content %}
-{%load static%}
+{% block content %} {%load static%}
 
 <head>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link
+    href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+    rel="stylesheet"
+    id="bootstrap-css"
+  />
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
-
 </head>
 
-
 <div class="jumbotron my-4 window">
-<p class="btn-primary" id="time"></p>
-  <form class="form" id="exam" autocomplete="off" onsubmit="return saveAns()"  action="/student/calculate-marks" method="POST">
+  <p class="btn-primary" id="time"></p>
+  <form
+    class="form"
+    id="exam"
+    autocomplete="off"
+    onsubmit="return saveAns()"
+    action="/student/calculate-marks"
+    method="POST"
+  >
     {% csrf_token %}
-    <h2 style="text-align: center;">Course: {{course.course_name}}</h2>
+    <h2 style="text-align: center">Course: {{course.course_name}}</h2>
     {% for q in questions%}
-    <h3 class="text-danger">{{ forloop.counter }}. {{q.question|title}}</h3><h4 style="text-align: right;">[{{q.marks}} Marks]</h4>
-    
-        <input type="hidden" name="csrfmiddlewaretoken" value="C24rUotmdHawVQJL3KrqiWxvti8UffOFYUc8TRbZtLt36AVLdP3jbkzUVe3beRAa">
-        
-        
-          <div class="form-check mx-4">
-            <input class="form-check-input" type="radio" name="{{ forloop.counter }}" id="{{q.option1}}" value="Option1">
-            <label class="form-check-label" for="option1">
-              {{q.option1|title}}
-            </label>
-          </div>
+    <h3 class="text-danger">{{ forloop.counter }}. {{q.question|title}}</h3>
+    <h4 style="text-align: right">[{{q.marks}} Marks]</h4>
 
-        
-          <div class="form-check mx-4">
-            <input class="form-check-input" type="radio" name="{{ forloop.counter }}" id="{{q.option2}}" value="Option2">
-            <label class="form-check-label" for="option2">
-              {{q.option2|title}}
-            </label>
-          </div>
+    <input
+      type="hidden"
+      name="csrfmiddlewaretoken"
+      value="C24rUotmdHawVQJL3KrqiWxvti8UffOFYUc8TRbZtLt36AVLdP3jbkzUVe3beRAa"
+    />
 
-        
-          <div class="form-check mx-4">
-            <input class="form-check-input" type="radio" name="{{ forloop.counter }}" id="{{q.option3}}" value="Option3">
-            <label class="form-check-label" for="option3">
-              {{q.option3|title}}
-            </label>
-          </div>
+    <div class="form-check mx-4">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="{{ forloop.counter }}"
+        id="{{q.option1}}"
+        value="Option1"
+      />
+      <label class="form-check-label" for="option1">
+        {{q.option1|title}}
+      </label>
+    </div>
 
-        
-          <div class="form-check mx-4">
-            <input class="form-check-input" type="radio" name="{{ forloop.counter }}" id="{{q.option4}}" value="Option4">
-            <label class="form-check-label" for="option4">
-              {{q.option4|title}}
-            </label>
-          </div>
+    <div class="form-check mx-4">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="{{ forloop.counter }}"
+        id="{{q.option2}}"
+        value="Option2"
+      />
+      <label class="form-check-label" for="option2">
+        {{q.option2|title}}
+      </label>
+    </div>
 
-        {% endfor %}
-        <input class="btn btn-success btn-lg" style="border-radius: 0%;" type="submit" value="Submit Answers">  
-    </form>
-  </div>
+    <div class="form-check mx-4">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="{{ forloop.counter }}"
+        id="{{q.option3}}"
+        value="Option3"
+      />
+      <label class="form-check-label" for="option3">
+        {{q.option3|title}}
+      </label>
+    </div>
+
+    <div class="form-check mx-4">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="{{ forloop.counter }}"
+        id="{{q.option4}}"
+        value="Option4"
+      />
+      <label class="form-check-label" for="option4">
+        {{q.option4|title}}
+      </label>
+    </div>
+
+    {% endfor %}
+    <input
+      class="btn btn-success btn-lg"
+      style="border-radius: 0%"
+      type="submit"
+      value="Submit Answers"
+    />
+  </form>
+</div>
 <script>
 
-var now = new Date();
-now.setMinutes(now.getMinutes() + {{course.timer}}); // timestamp
-end_now = new Date(now); // Date object
-x = setInterval(function () {
-    var now = new Date().getTime();
-    var timeleft = end_now - now;
-    var hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    var minutes = Math.floor((timeleft % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((timeleft % (1000 * 60)) / 1000);
-    
-  
-    var element = document.getElementById("time");
-    element.innerHTML = "<h2>You have <b>"+hours + "h "
-    + minutes + "m " + seconds + "s ";+"</b> to answer the questions</h2>";
-    if (timeleft < 0) {
-        clearInterval(x);
-        document.getElementById('exam').submit();
-    }
-}, 1000)
+  var now = new Date();
+  now.setMinutes(now.getMinutes() + {{course.timer}}); // timestamp
+  end_now = new Date(now); // Date object
+  x = setInterval(function () {
+      var now = new Date().getTime();
+      var timeleft = end_now - now;
+      var hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      var minutes = Math.floor((timeleft % (1000 * 60 * 60)) / (1000 * 60));
+      var seconds = Math.floor((timeleft % (1000 * 60)) / 1000);
+
+
+      var element = document.getElementById("time");
+      element.innerHTML = "<h2>You have <b>"+hours + "h "
+      + minutes + "m " + seconds + "s ";+"</b> to answer the questions</h2>";
+      if (timeleft < 0) {
+          clearInterval(x);
+          alert("Your Time is Finished")
+          document.getElementById('exam').submit();
+      }
+  }, 1000)
 </script>
-<script> 
-    function saveAns(){  
-
-        var ele = document.getElementsByTagName('input'); 
-        for(i = 0; i < ele.length; i++) { 
-            if(ele[i].type="radio") { 
-                if(ele[i].checked){        
-                  setCookie(ele[i].name,ele[i].value,3)
-                }
-            } 
-        } 
-          
+<script>
+  function saveAns() {
+    var ele = document.getElementsByTagName("input");
+    for (i = 0; i < ele.length; i++) {
+      if ((ele[i].type = "radio")) {
+        if (ele[i].checked) {
+          setCookie(ele[i].name, ele[i].value, 3);
+        }
+      }
     }
-    
-    function setCookie(cname, cvalue, exdays) {
-  var d = new Date();
-  d.setTime(d.getTime() + (exdays*24*60*60*1000));
-  var expires = "expires="+ d.toUTCString();
-  document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-}
+  }
 
-</script> 
+  function setCookie(cname, cvalue, exdays) {
+    var d = new Date();
+    d.setTime(d.getTime() + exdays * 24 * 60 * 60 * 1000);
+    var expires = "expires=" + d.toUTCString();
+    document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+  }
+</script>
 
-<br><br><br><br><br><br>
+<br /><br /><br /><br /><br /><br />
 {% endblock content %}
