--- a/templates/teacher/teacher_dashboard.html
+++ b/templates/teacher/teacher_dashboard.html
@@ -103,9 +103,28 @@
         </div>
       </div>
     </div>
+  
+
+  <div class="card">
+      <div class="btn btn-success">
+       <h2>Notice</h2> 
+      </div>
+    
+  <ul class="list-group">
+  
+    {% for notice in notices %}
+    <div style="display:inline-block;">
+    <li class="list-group-item">{{notice.description|title|safe}}<img src="/static/gif\new.gif">&nbsp;
+      {% if notice.time is not None %}<span style="color:red">{{notice.time}}</span>{% endif %}</li>
+      
+      
+</div>
+    {% endfor %}
+</ul>
+     
+    </div>
   </div>
-
-
+  </div>
 <br><br><br><br><br><br><br><br><br><br>
 
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
