--- a/templates/student/student_dashboard.html
+++ b/templates/student/student_dashboard.html
@@ -109,6 +109,8 @@
     <li class="list-group-item">{{notice.description|title|safe}}<img src="/static/gif\new.gif">&nbsp;
       {% if notice.time is not None %}<span style="color:red">{{notice.time}}</span>{% endif %}</li>
       
+      {% empty %}
+        <li class="list-group-item">No Notice Available <img src="/static/gif\new.gif">&nbsp;</li> 
       
 </div>
     {% endfor %}
